[build-system]
requires = ["setuptools>=62.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "usfmtc"
version = "0.2.4"
authors = [{name = "USFM Technical Committee", email = "fonts@sil.org"}]
readme = "python/README.md"
license = {file = "LICENSE.md"}
description = "USFM reference parser"
classifiers = [
   "Environment :: Console",
   "Programming Language :: Python :: 3.8",
   "Intended Audience :: Developers",
   "License :: OSI Approved :: MIT License",
   "Topic :: Text Processing :: Markup"
   ]
requires-python = ">=3.8"
#dynamic = ["version"]

dependencies = [
"lxml",
"rply",
"regex"
]

[project.optional-dependencies]
git = [
]

[project.urls]
Home-Page = "https://github.com/usfm-bible/tcdocs"

[tool.setuptools.packages.find]
where = ["python/lib"]

[tool.setuptools.package-data]
usfmtc = ["*.rng"]

[tool.setuptools.dynamic]
# version = {attr = "usfmtc.version"}

#[tool.setuptools]
#packages = ["usfmtc"]

[tool.bdist_wheel]
universal = true

[project.scripts]
usfmconv = "usfmtc:main"
